# mcp-this-openapi

./: .gitignore  Makefile  README.md  implementation_plan.md  pyproject.toml
examples/configs/: default.yaml  github.yaml  jsonplaceholder.yaml  petstore.yaml
src/mcp_this_openapi/: __init__.py  __main__.py  server.py
src/mcp_this_openapi/config/: __init__.py  loader.py  models.py
src/mcp_this_openapi/openapi/: __init__.py  auth.py  component_fixes.py  fetcher.py  filter.py  schema_fix.py  tool_naming.py  url_utils.py
tests/: test_auth.py  test_component_fixes.py  test_config.py  test_fastapi_validation.py  test_main.py  test_openapi.py  test_schema_fix.py  test_server.py  test_tool_naming.py
tests/fixtures/configs/: github.yaml  petstore.yaml
tests/fixtures/openapi_specs/: deprecated.json  multi_method.json  simple.json
